Restructure package `feed`
