# domain/feed/create_request.go
@@ -1,0 +1,8 @@
+package feed
+
+// CreateRequest represents a feed request
+// @model CreateRequest
+type CreateRequest struct {
+	Title string `json:"title" validate:"required"`
+	URL   string `json:"url" validate:"required,url"`
+}
